--- a/.github/workflows/build_test_deploy_node.yml
+++ b/.github/workflows/build_test_deploy_node.yml
@@ -36,7 +36,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: docker.io
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          username: hugogoncalves06
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
       - name: Extract Docker metadata
         id: meta
