--- a/.github/workflows/build_test_deploy_node.yml
+++ b/.github/workflows/build_test_deploy_node.yml
@@ -56,3 +56,24 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }} 
+  trigger-dispatch:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Fire event to Integration_continue_backend
+        run: |
+          curl -L \
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.PERSONNAL_ACCESS_TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/Hugogoncalves06/Integration_continue_backend/dispatches \
+          -d '{"event_type":"dispatch-event"}'
+      - name: Fire event to IntegrationContinue
+        run: |
+          curl -L \
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.PERSONNAL_ACCESS_TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/Hugogoncalves06/IntegrationContinue/dispatches \
+          -d '{"event_type":"dispatch-event"}' 
