--- a/.github/workflows/build_test_deploy_node.yml
+++ b/.github/workflows/build_test_deploy_node.yml
@@ -77,3 +77,12 @@ jobs:
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/Hugogoncalves06/IntegrationContinue/dispatches \
           -d '{"event_type":"dispatch-event"}' 
+      - name: Fire event to terraform_config
+        run: |
+          curl -L \
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.PERSONNAL_ACCESS_TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://github.com/Hugogoncalves06/terraform_config/dispatches \
+          -d '{"event_type":"dispatch-event"}'
